--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
 
     <head>
         <title>My Website</title>
-        <! -- this shows a link to the CSS stylesheet saved elsewhere -->
+        <! -- this shows a link to the CSS stylesheet saved elsewhere on the computer-->
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
